--- a/src/app/components/AppPlug/AppPlug.module.scss
+++ b/src/app/components/AppPlug/AppPlug.module.scss
@@ -1,67 +1,66 @@
-@use "sass:math";
-@import "src/app/styles/variables";
+@use 'sass:math';
+@import 'src/app/styles/variables';
 
 .plug {
-  height: 100%;
+	height: 100%;
 }
 
 .plugBody {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .plugLogo {
-  max-width: 175px;
-  width: 100%;
-  height: 60px;
-  margin: 0 auto;
-  img {
-    width: 100%;
-    max-width: 100%;
-  }
+	max-width: 175px;
+	width: 100%;
+	height: 60px;
+	margin: 0 auto;
+	img {
+		width: 100%;
+		max-width: 100%;
+	}
 }
 
 .plugContent {
-  max-width: 247px;
-  text-align: center;
-  font-size: 18px;
-  line-height: math.div(21, 18);
-  transform: translate(0, -30px);
-  display: flex;
-  flex-direction: column;
+	max-width: 247px;
+	text-align: center;
+	font-size: 18px;
+	line-height: math.div(21, 18);
+	transform: translate(0, -30px);
+	display: flex;
+	flex-direction: column;
 
-  strong {
-    margin-bottom: 8px;
-    text-align: center;
-    display: block;
-  }
-  .plugText {
-    font-size: 18px;
-    line-height: math.div(24, 18);
-    color: rgba(255, 255, 255, 0.8);
-  }
+	strong {
+		margin-bottom: 8px;
+		text-align: center;
+		display: block;
+	}
+	.plugText {
+		font-size: 18px;
+		line-height: math.div(24, 18);
+		color: rgba(255, 255, 255, 0.8);
+	}
 }
 
 .plugImage {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .plugButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 6px;
-  font-size: 18px;
-  line-height: math.div(21, 18);
-  text-align: center;
-  color: #1F8FEB;
-  padding: 15px;
-  margin-bottom: 17px;
-  &.hidden {
-    visibility: hidden;
-    opacity: 0;
-  }
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	column-gap: 6px;
+	font-size: 18px;
+	line-height: math.div(21, 18);
+	text-align: center;
+	color: #1f8feb;
+	padding: 15px;
+	margin-bottom: 17px;
+	&.hidden {
+		visibility: hidden;
+		opacity: 0;
+	}
 }
-
