--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -1,168 +1,167 @@
-@import "src/app/styles/variables";
+@import 'src/app/styles/variables';
 
 .confirmation {
-    height: calc($appHeight - 72px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    position: relative;
-    overflow-y: auto;
-    padding-bottom: 180px;
+	height: calc($appHeight - 72px);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	position: relative;
+	overflow-y: auto;
+	padding-bottom: 180px;
 
-    &__title {
-        text-align: center;
-        font-size: 22px;
-        font-weight: 500;
-    }
+	&__title {
+		text-align: center;
+		font-size: 22px;
+		font-weight: 500;
+	}
 
-    &__subtitle {
-        text-align: center;
-        color: #B6B6C4;
-        font-size: 16px;
-        font-weight: 400;
-    }
+	&__subtitle {
+		text-align: center;
+		color: #b6b6c4;
+		font-size: 16px;
+		font-weight: 400;
+	}
 
-    &__content {
-        width: 100%;
-        margin-top: 12px;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-    }
+	&__content {
+		width: 100%;
+		margin-top: 12px;
+		display: flex;
+		flex-direction: column;
+		gap: 8px;
+	}
 
-    &__block {
-        display: block;
-        width: 100%;
-        background-color: #0F2055;
-        padding: 12px 16px;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        gap: 14px;
+	&__block {
+		display: block;
+		width: 100%;
+		background-color: #0f2055;
+		padding: 12px 16px;
+		border-radius: 8px;
+		display: flex;
+		flex-direction: column;
+		gap: 14px;
 
-        .row {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 8px;
-        }
+		.row {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			gap: 8px;
+		}
 
-        .col {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
+		.col {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			gap: 8px;
+		}
 
-        h5 {
-            font-size: 16px;
-            font-weight: 400;
-            color: #B6B6C4;
-        }
+		h5 {
+			font-size: 16px;
+			font-weight: 400;
+			color: #b6b6c4;
+		}
 
-        p {
-            font-size: 16px;
-            font-weight: 400;
-        }
+		p {
+			font-size: 16px;
+			font-weight: 400;
+		}
 
-        .commentBtn {
-            font-size: 16px;
-            font-weight: 400;
-            color: #1F8FEB;
-            margin-left: 4px;
+		.commentBtn {
+			font-size: 16px;
+			font-weight: 400;
+			color: #1f8feb;
+			margin-left: 4px;
 
-            &.less {
-                margin-left: 0;
-                display: block;
-                margin-top: 4px;
-            }
-        }
-    }
+			&.less {
+				margin-left: 0;
+				display: block;
+				margin-top: 4px;
+			}
+		}
+	}
 
-    &__destinationWrapper {
-        margin-top: 4px;
+	&__destinationWrapper {
+		margin-top: 4px;
 
-        .title {
-            margin-bottom: 6px;
-            font-size: 12px;
-            font-weight: 400;
-            color: #B6B6C4;
-        }
-    }
+		.title {
+			margin-bottom: 6px;
+			font-size: 12px;
+			font-weight: 400;
+			color: #b6b6c4;
+		}
+	}
 
-    &__showAddressesBtn {
-        margin: 8px 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
-        font-size: 16px;
-        font-weight: 400;
-        color: #1F8FEB;
-    }
+	&__showAddressesBtn {
+		margin: 8px 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 8px;
+		font-size: 16px;
+		font-weight: 400;
+		color: #1f8feb;
+	}
 
-    &__bottom {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        z-index: 3;
-        background-color: #0F2055;
-        border-top: 1px solid #273666;
-        width: 100%;
-        padding-inline: 16px;
-        padding-top: 12px;
-        padding-bottom: 24px;
+	&__bottom {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		z-index: 3;
+		background-color: #0f2055;
+		border-top: 1px solid #273666;
+		width: 100%;
+		padding-inline: 16px;
+		padding-top: 12px;
+		padding-bottom: 24px;
 
-        &_fee {
-            display: flex;
-            justify-content: space-between;
+		&_fee {
+			display: flex;
+			justify-content: space-between;
 
-            h5 {
-                display: flex;
-                align-items: center;
-                gap: 8px;
-                font-size: 16px;
-                font-weight: 400;
-                color: #B6B6C4;
-            }
+			h5 {
+				display: flex;
+				align-items: center;
+				gap: 8px;
+				font-size: 16px;
+				font-weight: 400;
+				color: #b6b6c4;
+			}
 
-            p {
-                font-size: 16px;
-                font-weight: 400;
-            }
-        }
+			p {
+				font-size: 16px;
+				font-weight: 400;
+			}
+		}
 
-        &_total {
-            display: flex;
-            justify-content: space-between;
+		&_total {
+			display: flex;
+			justify-content: space-between;
 
-            h5,
-            p {
-                font-size: 18px;
-                font-weight: 600;
-            }
-        }
+			h5,
+			p {
+				font-size: 18px;
+				font-weight: 600;
+			}
+		}
 
-        .divider {
-            width: 100%;
-            height: 1px;
-            background-color: #273666;
-            margin: 12px 0;
-            margin-top: 8px;
-        }
+		.divider {
+			width: 100%;
+			height: 1px;
+			background-color: #273666;
+			margin: 12px 0;
+			margin-top: 8px;
+		}
 
-        &_buttons {
-            margin-top: 12px;
-            width: 100%;
-            display: flex;
-            gap: 8px;
+		&_buttons {
+			margin-top: 12px;
+			width: 100%;
+			display: flex;
+			gap: 8px;
 
-            .btn {
-                flex: 1;
-            }
-        }
-    }
-
+			.btn {
+				flex: 1;
+			}
+		}
+	}
 }
