--- a/src/app/components/TokensTabs/TokensTabs.module.scss
+++ b/src/app/components/TokensTabs/TokensTabs.module.scss
@@ -1,48 +1,50 @@
-@use "sass:math";
+@use 'sass:math';
 
 .tabs {
-  position: relative;
-  background: #0F2055;
-  border-radius: 24px 24px 0 0;
-  margin: 0 -16px;
-  min-height: 373px;
-  padding: 16px 16px 30px 16px;
+	position: relative;
+	background: #0f2055;
+	border-radius: 24px 24px 0 0;
+	margin: 0 -16px;
+	min-height: 373px;
+	padding: 16px 16px 30px 16px;
 }
 
 // =========================================================
 .tabsNav {
-   margin-bottom: 16px;
-   display: grid;
-   grid-template-columns: repeat(2, 1fr);
-   column-gap: 20px;
+	margin-bottom: 16px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	column-gap: 20px;
 }
 
 .tabsNavBtn {
-   position: relative;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-transform: capitalize;
-   line-height: math.div(21, 18);
-   text-align: center;
-   font-weight: 600;
-   height: 45px;
-   &::after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 10px;
-      transition: background-color 0.2s ease 0s;
-   }
-   &[disabled] {
-      &::after {
-         background-color: #1F8FEB;
-      }
-   }
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-transform: capitalize;
+	line-height: math.div(21, 18);
+	text-align: center;
+	font-weight: 600;
+	height: 45px;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		height: 4px;
+		background-color: rgba(255, 255, 255, 0.1);
+		border-radius: 10px;
+		transition: background-color 0.2s ease 0s;
+	}
+
+	&[disabled] {
+		&::after {
+			background-color: #1f8feb;
+		}
+	}
 }
 
 // =========================================================
@@ -118,4 +120,3 @@
 .assetInfoValue {
    font-weight: 600;
 }*/
-
