--- a/src/app/components/UI/AppLoader/AppLoader.module.scss
+++ b/src/app/components/UI/AppLoader/AppLoader.module.scss
@@ -1,50 +1,50 @@
-@use "sass:math";
-@import "src/app/styles/variables";
+@use 'sass:math';
+@import 'src/app/styles/variables';
 
 .loaderWrapper {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: $appWidth;
-  height: $appHeight;
-  display: flex;
-  justify-content: center;
-  background-color: #0C0C3A;
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	width: $appWidth;
+	height: $appHeight;
+	display: flex;
+	justify-content: center;
+	background-color: #0c0c3a;
 }
 
 .loaderContent {
-  margin-top: 72px;
+	margin-top: 72px;
 }
 
 .logo {
-  width: 175px;
-  height: 60px;
-  margin: 0 auto 120px auto;
-  img {
-    width: 100%;
-    max-width: 100%;
-  }
+	width: 175px;
+	height: 60px;
+	margin: 0 auto 120px auto;
+	img {
+		width: 100%;
+		max-width: 100%;
+	}
 }
 
 .loader {
-  animation: rotate 1s infinite linear;
-  width: 124px;
-  margin: 0 auto;
-  height: 124px;
-  img {
-    max-width: 100%;
-  }
-  &.small {
-    width: 40px;
-    height: 40px;
-  }
-  @keyframes rotate {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+	animation: rotate 1s infinite linear;
+	width: 124px;
+	margin: 0 auto;
+	height: 124px;
+	img {
+		max-width: 100%;
+	}
+	&.small {
+		width: 40px;
+		height: 40px;
+	}
+	@keyframes rotate {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
 }
