--- a/src/app/components/UI/Button/Button.module.scss
+++ b/src/app/components/UI/Button/Button.module.scss
@@ -1,58 +1,59 @@
-@use "sass:math";
+@use 'sass:math';
 
 .Button {
-  width: 100%;
-  height: 47px;
-  border-radius: 8px;
-  display: flex;
-  column-gap: 6px;
-  font-size: 18px;
-  justify-content: center;
-  align-items: center;
-  line-height: math.div(21, 18);
-  text-align: center;
-  color: #ffffff;
-  transition: all 0.2s ease 0s;
-  img {
-    width: 18px;
-    flex: 0 0 18px;
-    height: 18px;
-    max-width: 100%;
-  }
-  &[disabled] {
-    opacity: 0.5;
-    pointer-events: none;
-  }
+	width: 100%;
+	height: 47px;
+	border-radius: 8px;
+	display: flex;
+	column-gap: 6px;
+	font-size: 18px;
+	justify-content: center;
+	align-items: center;
+	line-height: math.div(21, 18);
+	text-align: center;
+	color: #ffffff;
+	transition: all 0.2s ease 0s;
+	img {
+		width: 18px;
+		flex: 0 0 18px;
+		height: 18px;
+		max-width: 100%;
+	}
+	&[disabled] {
+		opacity: 0.5;
+		pointer-events: none;
+	}
 }
 
 .primary {
-  color: #fff;
-  background-color: #1F8FEB;
-  @media (any-hover: hover) {
-    &:hover, &:focus {
-      background-color: #1a7dcc;
-    }
-  }
+	color: #fff;
+	background-color: #1f8feb;
+	@media (any-hover: hover) {
+		&:hover,
+		&:focus {
+			background-color: #1a7dcc;
+		}
+	}
 }
 
 .outline {
-  background: transparent;
-  border: 2px solid #1F8FEB;
-  @media (any-hover: hover) {
-    &:hover, &:focus {
-      background-color: rgba(255, 255, 255, 0.05);
-    }
-  }
+	background: transparent;
+	border: 2px solid #1f8feb;
+	@media (any-hover: hover) {
+		&:hover,
+		&:focus {
+			background-color: rgba(255, 255, 255, 0.05);
+		}
+	}
 }
 
 .clear {
-  min-width: auto;
-  height: auto;
-  padding: 0;
-  svg {
-    font-size: 16px;
-    flex: 0 0 16px;
-    color: #fff;
-  }
+	min-width: auto;
+	height: auto;
+	padding: 0;
+	svg {
+		font-size: 16px;
+		flex: 0 0 16px;
+		color: #fff;
+	}
 }
-
