--- a/src/app/components/UI/InfoTooltip/styles.module.scss
+++ b/src/app/components/UI/InfoTooltip/styles.module.scss
@@ -1,42 +1,42 @@
 .tooltip {
-    position: relative;
-    background-color: transparent;
-    display: grid;
-    place-content: center;
-    cursor: pointer;
+	position: relative;
+	background-color: transparent;
+	display: grid;
+	place-content: center;
+	cursor: pointer;
 
-    &:hover {
-        .tooltip__content {
-            opacity: 1;
-            pointer-events: all;
-        }
-    }
+	&:hover {
+		.tooltip__content {
+			opacity: 1;
+			pointer-events: all;
+		}
+	}
 
-    &__content {
-        color: #fff;
-        transition: .3s opacity ease;
-        opacity: 0;
-        pointer-events: none;
-        position: absolute;
-        left: 50%;
-        top: 130%;
-        transform: translateX(-50%);
-        background-color: #144182;
-        border-radius: 5px;
-        padding: 5px 12px;
-        width: max-content;
-        font-size: 16px;
-        font-weight: 300;
+	&__content {
+		color: #fff;
+		transition: 0.3s opacity ease;
+		opacity: 0;
+		pointer-events: none;
+		position: absolute;
+		left: 50%;
+		top: 130%;
+		transform: translateX(-50%);
+		background-color: #144182;
+		border-radius: 5px;
+		padding: 5px 12px;
+		width: max-content;
+		font-size: 16px;
+		font-weight: 300;
 
-        &::before {
-            content: "";
-            position: absolute;
-            top: -3px;
-            left: 50%;
-            transform: translateX(-50%) rotate(-45deg);
-            width: 6px;
-            height: 6px;
-            background: #144182;
-        }
-    }
+		&::before {
+			content: '';
+			position: absolute;
+			top: -3px;
+			left: 50%;
+			transform: translateX(-50%) rotate(-45deg);
+			width: 6px;
+			height: 6px;
+			background: #144182;
+		}
+	}
 }
