--- a/src/app/components/UI/RoutersNav/RoutersNav.module.scss
+++ b/src/app/components/UI/RoutersNav/RoutersNav.module.scss
@@ -1,42 +1,42 @@
-@use "sass:math";
+@use 'sass:math';
 
 .navHeader {
-  position: relative;
-  &:not(:last-child) {
-    margin-bottom: 25px;
-  }
+	position: relative;
+	&:not(:last-child) {
+		margin-bottom: 25px;
+	}
 }
 
 .backBtn {
-  position: absolute;
-  left: 0;
-  top: -3px;
-  width: 32px;
-  height: 32px;
-  flex: 0 0 32px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.1s ease 0s;
-  &:focus {
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-  img {
-    transform: translate(-1px, 0);
-  }
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-  }
+	position: absolute;
+	left: 0;
+	top: -3px;
+	width: 32px;
+	height: 32px;
+	flex: 0 0 32px;
+	border-radius: 50%;
+	background-color: rgba(255, 255, 255, 0.1);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: background-color 0.1s ease 0s;
+	&:focus {
+		background-color: rgba(255, 255, 255, 0.2);
+	}
+	img {
+		transform: translate(-1px, 0);
+	}
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.2);
+	}
 }
 
 .title {
-  text-align: center;
-  justify-content: center;
-  flex: 1 1 auto;
-  padding: 0 30px;
-  font-size: 22px;
-  font-weight: 500;
-  line-height: math.div(26, 22);
+	text-align: center;
+	justify-content: center;
+	flex: 1 1 auto;
+	padding: 0 30px;
+	font-size: 22px;
+	font-weight: 500;
+	line-height: math.div(26, 22);
 }
