--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,76 +1,75 @@
-@import "_variables";
+@import '_variables';
 
 ::-webkit-scrollbar {
-  display: none;
-  scrollbar-width: none;
+	display: none;
+	scrollbar-width: none;
 }
 
 * {
-   padding: 0;
-   margin: 0;
-   border: 0;
+	padding: 0;
+	margin: 0;
+	border: 0;
 }
 
 *,
 *:before,
 *:after {
-   box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :focus,
 :active {
-   outline: none;
+	outline: none;
 }
 
 a:focus,
 a:active {
-   outline: none;
+	outline: none;
 }
 
 html,
 body {
-  height: $appHeight;
-  overflow: auto;
-  width: $appWidth;
+	height: $appHeight;
+	overflow: auto;
+	width: $appWidth;
 }
 
 body {
-  font-size: $fontSize;
-  color: $mainColor;
-  line-height: 1;
-  font-family: $fontFamily;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
+	font-size: $fontSize;
+	color: $mainColor;
+	line-height: 1;
+	font-family: $fontFamily;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 input,
 button,
 textarea {
-   font-family: $fontFamily;
-   font-size: inherit;
+	font-family: $fontFamily;
+	font-size: inherit;
 }
 
 button {
-   cursor: pointer;
-   color: inherit;
-   background-color: inherit;
+	cursor: pointer;
+	color: inherit;
+	background-color: inherit;
 }
 
 a {
-   color: inherit;
-   text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 ul li {
-   list-style: none;
+	list-style: none;
 }
 
 img {
-   vertical-align: top;
+	vertical-align: top;
 }
 
 h1,
@@ -79,6 +78,6 @@ h3,
 h4,
 h5,
 h6 {
-   font-weight: inherit;
-   font-size: inherit;
+	font-weight: inherit;
+	font-size: inherit;
 }
