--- a/src/app/components/UI/AppLoader/AppLoader.module.scss
+++ b/src/app/components/UI/AppLoader/AppLoader.module.scss
@@ -6,8 +6,8 @@
 	z-index: 100;
 	top: 0;
 	left: 0;
-	width: $appWidth;
-	height: $appHeight;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	background-color: #0c0c3a;
