--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -15,6 +15,10 @@
 		text-align: center;
 		font-size: 22px;
 		font-weight: 500;
+
+		:global(.app-fullscreen) & {
+			font-size: 25px;
+		}
 	}
 
 	&__subtitle {
@@ -22,6 +26,10 @@
 		color: #b6b6c4;
 		font-size: 16px;
 		font-weight: 400;
+
+		:global(.app-fullscreen) & {
+			font-size: 18px;
+		}
 	}
 
 	&__content {
