--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -34,7 +34,6 @@
 
 	&__content {
 		width: 100%;
-		min-width: calc(var(--app-width) - 20px);
 		margin-top: 12px;
 		display: flex;
 		flex-direction: column;
@@ -57,6 +56,12 @@
 			align-items: center;
 			justify-content: space-between;
 			gap: 8px;
+
+			.asset {
+				display: inline-flex;
+				align-items: center;
+				gap: 4px;
+			}
 		}
 
 		.col {
@@ -159,6 +164,8 @@
 		}
 
 		&_error {
+			margin-inline: auto;
+			width: calc(var(--app-width) - 20px);
 			color: #ff6767;
 			font-size: 14px;
 			font-weight: 500;
